Changelog
=========

3.4 (unreleased)
----------------

- Make default value adapter for `public_trial` use the configurable default
  value from IClassificationSettings registry record.

- Add an IClassificationSettings registry record.
  [lgraf]

- Allow public trial state to also be modified in closed dossier states.
  [mathias.leimgruber]

- File a copy of the mail in the dossier by default when sending documents from GEVER.
  [lgraf]

- Add overview tab for mail (Shows metadata).
  [mathias.leimgruber]

- Show classification infos on document overview tab.
  [mathias.leimgruber]

- Add classification behavior to mail.
  [mathias.leimgruber]

- Use document byline also on mail.
  [mathias.leimgruber]

- OGQuickUploadCapableFileFactory: Set default values before adding content to container.
  (Prevents values set by handlers on ObjectAddedEvent to be overwritten again).
  [lgraf]

- Implement document metadata behavor on mail (incl. Upgrade step and init event).
  [mathias.leimgruber]

- Refactored document overview.
  [lgraf]

- Monkey patch DexterityContent.__getattr__.
  This is required to support dynamic lookup of schema-level default values for
  fields in behaviors. It basically is a backport of this Dexterity 2.x fix:
  https://github.com/plone/plone.dexterity/commit/dd491480b869bbe21ee50ef413c263705af7b170
  [lgraf]

- Use IDocumentNameFromTitle behavior from document also for mail.
  [mathias.leimgruber]

- Fix double journal entries using quickupload.
  [mathias.leimgruber]

- Test quickupload: Replace mock tests by functional tests.
  [mathias.leimgruber]

- Implement tabbedview for ftw.mail.mail content (Preview / Journal / Info).
  [mathias.leimgruber]

- Added public-trial-column to document tab.
  [lknoepfel]

- Added public_trial index and metadata field.
  [lknoepfel]

- Public trial is no longer a restricted vocab. It behaves like a regular one.
  New default is "unchecked".
  [mathias.leimgruber]
